# IP-Verse-Mafia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LAUNCH_JARVIS_VOICE.bat  START_PRIME.bat  START_ROOM_SERVER.bat  audit_report.md  calculator.html  console_game.py  contacts.json  fix_imports.py  fix_registry.py  main.exe.py  main.py  my-second-brain-requirements.md  or_client.py  portfolio.html  push_to_github.bat  pyproject.toml  readme.md  requirements-linux.txt  requirements-windows.txt  requirements.txt  room_client.html  room_server.py  run.bat  run.sh  school_timetable.html  second-brain-prd.md  setup.py  start.bat  start_os.bat  start_sat.bat  startup_installer.py  test_connect.py  ui.py  ui_core.py  ui_sat.py  ui_simple.py  verify_routing.py  (+1 more)
actions/: advanced_communicator.py  advanced_memory.py  agent_orchestrator.py  aider_helper.py  aislop_helper.py  anomaly_detector.py  antidrone_defense.py  anus_cli_helper.py  app_shortcuts.py  ask_antigravity.py  asset_scaffolder.py  audio_mixer.py  auto_code_explainer.py  auto_code_helper.py  auto_indexer.py  auto_updater.py  autonomous_autopilot.py  autonomous_shell_helper.py  autopilot_agent.py  awesome_repos_helper.py  battery_optimizer.py  bill_splitter.py  boss_orchestrator.py  briefing.py  briefing_gui.py  broadcast_center.py  browser_agent.py  browser_control.py  calendar_helper.py  calendar_tool.py  chess_gui.py  chess_partner.py  chronos_routines.py  claude_code_helper.py  clipboard_ai_gui.py  clipboard_history.py  clipboard_manager.py  cmd_control.py  code_companion.py  code_helper.py  (+181 more)
agent/: autonomous_core.py  (+16 more)
(+3426 files in other folders)
